--- a/src/main/webapp/app/entities/smiley-rating/smiley-rating.component.html
+++ b/src/main/webapp/app/entities/smiley-rating/smiley-rating.component.html
@@ -29,9 +29,23 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let smileyRating of smileyRatings ;trackBy: trackId">
+<!--                - put in fragments file?-->
+                <tr *ngFor="let smileyRating of smileyRatings ; trackBy: trackId">
                     <td><a [routerLink]="['/smiley-rating', smileyRating.id, 'view']">{{ smileyRating.id }}</a></td>
-                    <td>{{ smileyRating.rating }}</td>
+                    <td>{{smileyRating.rating}}
+                        <div *ngIf="smileyRating.rating == 'HAPPY'">
+                            <span><fa-icon class="ng-fa-icon" icon="smile" ng-reflect-icon="smile"> <svg role="img" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="smile" class="svg-inline&#45;&#45;fa fa-smile fa-w-18" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"></path></svg></fa-icon></span>
+                        </div>
+                        <div *ngIf="smileyRating.rating == 'NEUTRAL'">
+                            <span><fa-icon class="ng-fa-icon" icon="meh" ng-reflect-icon="meh"> <svg role="img" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="meh" class="svg-inline&#45;&#45;fa fa-smile fa-w-18" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"></path></svg></fa-icon></span>
+                        </div>
+                        <div *ngIf="smileyRating.rating == 'SAD'">
+                            <span><fa-icon class="ng-fa-icon" icon="sad-cry" ng-reflect-icon="sad-cry"> <svg role="img" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="sad-cry" class="svg-inline&#45;&#45;fa fa-smile fa-w-18" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"></path></svg></fa-icon></span>
+                        </div>
+                        <div *ngIf="smileyRating.rating == 'ANGRY'">
+                            <span><fa-icon class="ng-fa-icon" icon="angry" ng-reflect-icon="angry"> <svg role="img" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="angry" class="svg-inline&#45;&#45;fa fa-smile fa-w-18" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"></path></svg></fa-icon></span>
+                        </div>
+                    </td>
                     <td>
                         {{ smileyRating.user?.id }}
                     </td>
